[package]
name = "scan"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6.0"
rand = "0.6"

[dependencies.smoltcp]
version = "0.5"
default-features = false
features = [
    "std",
    "socket-tcp",
    "proto-ipv4", "proto-igmp", "proto-dhcpv4",
]

[dependencies.net2]
git = "https://github.com/ExodusVPN/net2.git"
branch = "master"
